--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,16 @@
 .App {
   text-align: center;
 }
+
+.information {
+  text-align: left;
+  margin-top: 15px;
+}
+
+.form {
+  padding: 10px 10px 10px 10px;
+}
+
+.submitButton {
+  text-align: center;
+}
