--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,4 +9,18 @@
 
 .form {
   padding: 10px 10px 10px 10px;
+  width: auto;
+}
+
+#more-info {
+  font-weight: 100;
+  line-height: 1.4;
+}
+
+#show-employees-btn {
+  margin-top: 20px;
+}
+
+#employee-card {
+  margin-top: 15px;
 }
